Move ragen and verl into thirdparty directory

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "ragen"]
-	path = ragen
+	path = thirdparty/ragen
 	url = git@github.com:ZihanWang314/RAGEN.git
 	branch = main-new
 [submodule "verl"]
-	path = verl
+	path = thirdparty/verl
 	url = git@github.com:volcengine/verl.git
