fix problem prompts in dataset with repeated prompting, add extra compute_score function to enable format score, easier for scc scripts. verl enables random shuffle on validation dataset.

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,4 +4,4 @@
 	branch = main-new
 [submodule "verl"]
 	path = thirdparty/verl
-	url = git@github.com:volcengine/verl.git
+	url = git@github.com:XiaofengLin7/verl.git
