--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "verl"]
 	path = thirdparty/verl
 	url = git@github.com:XiaofengLin7/verl.git
+[submodule "thirdparty/alfworld"]
+	path = thirdparty/alfworld
+	url = git@github.com:alfworld/alfworld.git
