--- a/reil/trainer/config/evaluation.yaml
+++ b/reil/trainer/config/evaluation.yaml
@@ -1,3 +1,11 @@
+env:
+  name: sokoban
+  dim_x: 6
+  dim_y: 6
+  num_boxes: 1
+  max_steps: 100
+  search_depth: 30 # this will change the starting position of the player
+
 data:
   max_prompt_length: 1024
   max_response_length: 1024
