--- a/reil/trainer/config/evaluation.yaml
+++ b/reil/trainer/config/evaluation.yaml
@@ -19,11 +19,58 @@ agent_proxy:
   max_turn: 30
   enable_think: False # False -> no think RL(alfworld), True -> think RL(sokoban)
 
+evaluator:
+  n_gpus_per_node: 2
+  nnodes: 1
+  project_name: reil
+  experiment_name: eval_ckpts
+  logger: [ 'console', 'wandb' ]
+  checkpoint_dir: /usr3/graduate/xfl/lab/REIL/checkpoints/ds543/REIL/sokoban-1.5b-0.0075beta-0.001kl-2025-05-01
+
 
 actor_rollout_ref:
   model:
     path: /usr3/graduate/xfl/lab/REIL/checkpoints/ds543/REIL/alfworld-1.5b-0.005beta-0.001kl-pick_n_place_05-07/huggingface
-
+  actor:
+    strategy: fsdp  # This is for backward-compatibility
+    ppo_mini_batch_size: 256
+    ppo_micro_batch_size: null # will be deprecated, use ppo_micro_batch_size_per_gpu
+    ppo_micro_batch_size_per_gpu: null
+    use_dynamic_bsz: False
+    ppo_max_token_len_per_gpu: 16384 # n * ${data.max_prompt_length} + ${data.max_response_length}
+    grad_clip: 1.0
+    # pg_losses2 = -advantages * torch.clamp(ratio, 1 - cliprange_low, 1 + cliprange_high)
+    clip_ratio: 0.2 # default value if clip_ratio_low and clip_ratio_high are not specified
+    clip_ratio_low: 0.2
+    clip_ratio_high: 0.2
+    clip_ratio_c: 3.0 # lower bound of the value for Dual-clip PPO from https://arxiv.org/pdf/1912.09729
+    loss_agg_mode: "token-mean" # / "seq-mean-token-sum" / "seq-mean-token-mean"
+    entropy_coeff: 0.001
+    use_kl_loss: False # True for GRPO
+    use_torch_compile: True # False to disable torch compile
+    kl_loss_coef: 0.001 # for grpo
+    kl_loss_type: low_var_kl # for grpo
+    ppo_epochs: 1
+    shuffle: False
+    ulysses_sequence_parallel_size: 1 # sp size
+    checkpoint:
+      contents: ['model', 'optimizer', 'extra']  # with 'hf_model' you can save whole model as hf format, now only use sharded model checkpoint to save space
+    optim:
+      lr: 1e-6
+      lr_warmup_steps: -1 # Prioritized. Negative values mean delegating to lr_warmup_steps_ratio.
+      lr_warmup_steps_ratio: 0.  # the total steps will be injected during runtime
+      min_lr_ratio: null   # only useful for warmup with cosine
+      warmup_style: constant  # select from constant/cosine
+      total_training_steps: -1  # must be override by program
+      weight_decay: 0.01
+    fsdp_config:
+      wrap_policy:
+        # transformer_layer_cls_to_wrap: None
+        min_num_params: 0
+      param_offload: False
+      optimizer_offload: False
+      fsdp_size: -1
+    state_masking: False
   rollout:
     name: vllm
     temperature: 1.0
@@ -45,8 +92,6 @@ actor_rollout_ref:
     max_num_seqs: 1024
     log_prob_micro_batch_size: null # will be deprecated, use log_prob_micro_batch_size_per_gpu
     log_prob_micro_batch_size_per_gpu: null
-    log_prob_use_dynamic_bsz: ${actor_rollout_ref.actor.use_dynamic_bsz}
-    log_prob_max_token_len_per_gpu: ${actor_rollout_ref.actor.ppo_max_token_len_per_gpu}
     disable_log_stats: True
     enable_chunked_prefill: True # may get higher throughput when set to True. When activated, Please increase max_num_batched_tokens or decrease max_model_len.
     # for hf rollout
@@ -70,15 +115,15 @@ es_manager:
     env_configs:
       tags: ["LargerSokoban"]
       n_groups: [8] # If not set, all env names divide nums equally. Under the same group, the env config and env seed (prompt) are equal in each generation
-  # val:
-  #   env_groups: 256 
-  #   group_size: 1 # should be set to 1 because val temperature is set to 0 and same prompt leads to same output
-  #   env_configs:
-  #     tags: ["LargerSokoban"]
-  #     n_groups: [256] # TODO: If not set, all env names divide nums equally. Under the same group, the env config
   val:
-    env_groups: 41 # 41 for pick_n_place and pick_two_obj_and_place
+    env_groups: 256 
     group_size: 1 # should be set to 1 because val temperature is set to 0 and same prompt leads to same output
     env_configs:
-      tags: ["ALFWorld"]
-      n_groups: [41] # TODO: If not set, all env names divide nums equally. Under the same group, the env config
+      tags: ["LargerSokoban"]
+      n_groups: [256] # TODO: If not set, all env names divide nums equally. Under the same group, the env config
+  # val:
+  #   env_groups: 41 # 41 for pick_n_place and pick_two_obj_and_place
+  #   group_size: 1 # should be set to 1 because val temperature is set to 0 and same prompt leads to same output
+  #   env_configs:
+  #     tags: ["ALFWorld"]
+  #     n_groups: [41] # TODO: If not set, all env names divide nums equally. Under the same group, the env config
