--- a/reil/trainer/config/envs.yaml
+++ b/reil/trainer/config/envs.yaml
@@ -27,5 +27,6 @@ custom_envs:
     max_actions_per_traj: 30
     env_config: 
       config_path: "/projectnb/replearn/xfl/REIL/reil/env/alfworld/base_config.yaml"
-      train_eval: "eval_out_of_distribution"
+      # train_eval: "eval_out_of_distribution"
+      train_eval: "eval_in_distribution"
     
