--- a/reil/trainer/config/contrastive_trainer.yaml
+++ b/reil/trainer/config/contrastive_trainer.yaml
@@ -35,6 +35,11 @@ model:
   target_modules: all-linear  # Target modules for LoRA adaptation
   use_liger: False
 
+algorithm:
+  contrastive_loss:
+    gamma: 0.5
+    ratio: 0.5
+  
 optim:
   lr: 1e-5
   betas: [0.9, 0.95]
