--- a/reil/trainer/config/contrastive_trainer.yaml
+++ b/reil/trainer/config/contrastive_trainer.yaml
@@ -35,10 +35,21 @@ model:
   target_modules: all-linear  # Target modules for LoRA adaptation
   use_liger: False
 
+actor_rollout_ref:
+  rollout:
+    n: 1
+    do_sample: True
+    val_kwargs:
+      temperature: 0.5
+      top_p: 1.0
+      top_k: -1
+      n: 1
+      do_sample: True
+
 algorithm:
   contrastive_loss:
     gamma: 0.5
-    ratio: 0.5
+    ratio: 1
   
 optim:
   lr: 1e-5
