--- a/reil/trainer/config/reil_trainer.yaml
+++ b/reil/trainer/config/reil_trainer.yaml
@@ -191,6 +191,8 @@ algorithm:
   gamma: 1.0
   lam: 1.0
   adv_estimator: gae
+  advantage: positive
+  positive_advantage_weight: 1.0
   use_kl_in_reward: False
   kl_penalty: kl  # how to estimate kl divergence
   kl_ctrl:
