--- a/reil/trainer/config/envs.yaml
+++ b/reil/trainer/config/envs.yaml
@@ -22,6 +22,18 @@ custom_envs:
       max_steps: 100
       search_depth: 10
 
+  ComplexSokoban:
+    env_type: sokoban
+    max_actions_per_traj: 14
+    env_instruction: "You are solving the Sokoban puzzle. You are the player and you need to push all boxes to targets. When you are right next to a box, you can push it by moving in the same direction. You cannot push a box through a wall, and you cannot pull a box. The answer should be a sequence of actions, like <answer>Right || Right || Up</answer>"
+    max_tokens: 100
+    env_config:
+      dim_x: 10
+      dim_y: 10
+      num_boxes: 2
+      max_steps: 100
+      search_depth: 10
+
   ALFWorld:
     env_type: alfworld
     max_actions_per_traj: 30
