--- a/reil/trainer/config/envs.yaml
+++ b/reil/trainer/config/envs.yaml
@@ -9,6 +9,17 @@ custom_envs:
       dim_y: 6
       num_boxes: 1
       max_steps: 100
+      
+  SimpleSokobanCardinal:
+    env_type: sokoban_cardinal
+    max_actions_per_traj: 10
+    env_instruction: "You are solving the Sokoban puzzle. You are the player and you need to push all boxes to targets. When you are right next to a box, you can push it by moving in the same direction. You cannot push a box through a wall, and you cannot pull a box. The answer should be a sequence of actions, like <answer>Right || Right || Up</answer>"
+    max_tokens: 100
+    env_config:
+      dim_x: 6
+      dim_y: 6
+      num_boxes: 1
+      max_steps: 100
 
   LargerSokoban:
     env_type: sokoban
