evaluate ckpts script for gp_l & add option of whether apply chat_template and apply parse response in naive_ctx_manager

--- a/reil/trainer/config/envs.yaml
+++ b/reil/trainer/config/envs.yaml
@@ -84,3 +84,11 @@ custom_envs:
       # train_eval: "eval_in_distribution"
       train_eval: "eval"
     
+  GP-L:
+    env_type: gp_l
+    max_actions_per_traj: 1
+    env_config:
+      target: 24
+      num_cards: 4
+      treat_face_cards_as_10: True
+      ood: False
