--- a/reil/trainer/config/reil_trainer.yaml
+++ b/reil/trainer/config/reil_trainer.yaml
@@ -10,6 +10,7 @@ data:
   val_files: ./data/sokoban/test.parquet
   prompt_key: prompt
   reward_fn_key: data_source
+  chat_template: False
   max_prompt_length: 512
   max_response_length: 512
   train_batch_size: 1024
