loading ref model, compute ref_logp, add kl regularization to SFT loss

--- a/reil/trainer/config/sft_trainer.yaml
+++ b/reil/trainer/config/sft_trainer.yaml
@@ -68,4 +68,7 @@ trainer:
   policy_eval: True
   sft_type: standard
   aft_power: 1.0
+  kl_regularization:
+    enabled: false
+    kl_coef: 0.05
 
