--- a/reil/trainer/config/sft_trainer.yaml
+++ b/reil/trainer/config/sft_trainer.yaml
@@ -72,3 +72,12 @@ trainer:
     enabled: false
     kl_coef: 0.05
 
+  anchor_regularization:
+    enabled: False
+    l2_anchor_coeff: 0.0
+    include_bias: False
+    include_layernorm: False
+    normalize: none  # or none
+    mode: gpu_mirror        # gpu_mirror or cpu_mirror (not used if disabled)
+    every_n_steps: 1        # compute every step by default
+
