unname codebase and update readme

--- a/reil/trainer/config/evaluation.yaml
+++ b/reil/trainer/config/evaluation.yaml
@@ -35,14 +35,14 @@ evaluator:
   project_name: reil
   experiment_name: eval_ckpts
   logger: [ 'console', 'wandb' ]
-  checkpoint_dir: /usr3/graduate/xfl/lab/REIL/checkpoints/ds543/REIL/sokoban-1.5b-0.0075beta-0.001kl-2025-05-01
+  checkpoint_dir: YOUR_CHECKPOINT_DIR
   is_lora: False
   resume_step: 0
   seed: 42
 
 actor_rollout_ref:
   model:
-    path: /usr3/graduate/xfl/lab/REIL/checkpoints/ds543/REIL/alfworld-1.5b-0.005beta-0.001kl-pick_n_place_05-07/huggingface
+    path: YOUR_BASE_MODEL
   actor:
     strategy: fsdp  # This is for backward-compatibility
     ppo_mini_batch_size: 256
