--- a/reil/trainer/config/dpo_trainer.yaml
+++ b/reil/trainer/config/dpo_trainer.yaml
@@ -4,14 +4,14 @@ defaults:
 
 actor_rollout_ref:
   model:
-    path: "/usr3/graduate/xfl/lab/REIL/models/rlft/models--Qwen--Qwen2.5-1.5B/snapshots/8faed761d45a263340a0528343f099c05c9a4323"
+    path: "YOUR_BASE_MODEL"
 
 
 output_dir: "checkpoints/dpo_model"  # Directory to save model outputs
 
 # Dataset configuration
 dataset:
-  name: "Xiaofeng77/reil_sokoban_preference"
+  name: "YOUR_HF_REPO"
   apply_chat_template: False
 
 
