--- a/reil/trainer/config/envs.yaml
+++ b/reil/trainer/config/envs.yaml
@@ -221,7 +221,7 @@ custom_envs:
     env_type: alfworld
     max_actions_per_traj: 30
     env_config: 
-      config_path: "/projectnb/replearn/xfl/REIL/reil/env/alfworld/base_config.yaml"
+      config_path: "YOUR_ALFWORLD_CONFIG"
       # train_eval: "eval_out_of_distribution"
       # train_eval: "eval_in_distribution"
       train_eval: "eval"
